--- a/Html Project/mock_up_file.html
+++ b/Html Project/mock_up_file.html
@@ -58,7 +58,7 @@
                 <li><a href="https://en.wikipedia.org/wiki/Computer_science" class="linkage" target="_blank" title="What are the computer sciences?">Computer Science</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/3D_printing" class="linkage" target="_blank" title="What is 3D Printing?">3D Printing</a></li>
                 <li><a href="https://en.wikipedia.org/wiki/Computer_programming" class="linkage" target="_blank" title="What is programming?">Programming</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Pyrography">Pyrography</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Pyrography" class="linkage" target="_blank" title="What is Pyrography?">Pyrography</a></li>
 
             </ol>
           </div>
