--- a/projects/shotglass/shotglass.html
+++ b/projects/shotglass/shotglass.html
@@ -17,14 +17,14 @@
         <tr></tr>
         <tbody>
         <tr>
-          <td img align="left"><img src="file:///home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/names1.jpg" width="200" height="220"></td>
-          <td img align="left"><img src="file:///home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/names2.jpg" width="200" height="220"></td>
-          <td img align="left"><img src="file:///home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/pcboard.jpg" width="200" height="220"></td>
+          <td img align="left"><img src="imgs/names1.jpg" width="200" height="220"></td>
+          <td img align="left"><img src="imgs/names2.jpg" width="200" height="220"></td>
+          <td img align="left"><img src="imgs/pcboard.jpg" width="200" height="220"></td>
         </tr>
         <tr>
-          <td img align="left"><img src="file:///home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/platforms1.jpg" width="200" height="220"></td>
-          <td img align="left"><img src="file:///home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/microcontroller.jpg" width="200" height="220"></td>
-          <td img align="left"><img src="file:///home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/rearsolder.jpg" width="200" height="220"></td>
+          <td img align="left"><img src="imgs/platforms1.jpg" width="200" height="220"></td>
+          <td img align="left"><img src="imgs/microcontroller.jpg" width="200" height="220"></td>
+          <td img align="left"><img src="imgs/rearsolder.jpg" width="200" height="220"></td>
         </tr>
 </tbody>
 </table>
@@ -39,13 +39,13 @@ This is an analog LED chaser.</p>
   <tr></tr>
   <tbody>
   <tr>
-    <td><img src="/home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/cleanside.jpg" width="200" height="220"></td>
-    <td><img src="/home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/dirtyside.jpg" width="200" height="220"></td>
-    <td><img src="/home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/batside.jpg" width="200" height="220"></td>
-    <td><img src="/home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/interior.jpg" width="200" height="220"></td>
+    <td><img src="imgs/cleanside.jpg" width="200" height="220"></td>
+    <td><img src="imgs/dirtyside.jpg" width="200" height="220"></td>
+    <td><img src="imgs/batside.jpg" width="200" height="220"></td>
+    <td><img src="imgs/interior.jpg" width="200" height="220"></td>
 </tr>
 <tr>
-  <td><video src="/home/alphonse/Desktop/Html%20Project/projects/shotglass/imgs/inaction.mp4" width="300" height="330" controls>In Action</video></td>
+  <td><video src="imgs/inaction.mp4" width="300" height="330" controls>In Action</video></td>
 
 </tr>
 </tbody>
