--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <br>
     <h4 class="normal-text"><strong>Photo</strong>:  Jason M Reitz (<a href="https://www.twitter.com/AlphonseJReitz" target="_blank" title="Tweeting!">Alphonse</a>)</h4>
     <br>
-      <h3 class="large-text" >Projects</h3>
+      <h2 class="large-text" >Projects</h2>
         <ol class="projects">
            <li><a href="./projects/shotglass/shotglass.html" target="_blank"class="linkage" title="Shot Glass Project">Shot Glass Light Blast</a></li>
             <li><a href="./projects/millcount/millioncounter.html" target="_blank"class="linkage" title="One Million Second Project">Million Counter</a></li>
@@ -21,20 +21,20 @@
             
         </ol>
       <div id="About Me">
-      <h3  class="large-text" id="about">About Me:</h3>
+      <h2  class="large-text" id="about">About Me:</h2>
         <ul class="aboutme">
 
             <li><a href="#General" class="linkage">General Information</a></li>
             <li><a href="#Hobbies" class="linkage">Hobbies / Interests</a></li>
             <li><a href="#Family" class="linkage">Family</a></li>
-            <li>Education</li>
+            <li><a href="#Education" class="linkage">Education</li>
             <li>More Information</li>
 
         </ul>
     </div>
         <div id="General">
 
-            <h3 class="large-text" id="general">General Information</h3>
+            <h2 class="large-text" id="general">General Information</h2>
               <p class="small-text">
                     My name is Jason Reitz, although as you can see, I also go by Alphonse.
                     This was from my time in French class in <a href="https://www.amerysd.k12.wi.us/" title="Class 2011" target="_blank" class="linkage">high school</a> and it's just stuck with me. <br>
@@ -45,7 +45,7 @@
                 </p>
         </div>
         <div id="Hobbies">
-            <h3 class="large-text" id="hobbies">Hobbies / Interests</h3>
+            <h2 class="large-text" id="hobbies">Hobbies / Interests</h2>
             <p class="small-text">I have a few main interests running at the moment.<br>
                 I had a tiny amount of electrical knowledge from a class during my stint at <a href="https://www.uti.edu/" target="_blank" class="linkage" title="Universal Technical Institute">Universal Techinal Institute</a>.<br>
                     As for computer sciences, I had played around with computers during high school, so I had a base point.  
@@ -64,14 +64,14 @@
     </p>
 
         <div id="Family">
-          <h3 class="large-text" id="family">Family</h3>
+          <h2 class="large-text" id="family">Family</h2>
         <p class="small-text">I have a wonderful family consisting on my wife Cassandra, my daughter Brynn, son's Devereaux & Sterling, and my youngest Zeyta.<br>
                 I also have my mother Carol, brother Adam, brother-in-law Joseph (Posey), sister-in-law Taylor, and niece Marlee.
         </p>
         </div>
         </div>
         <div class="contact">
-          <h3 class="contact">Contact Information</h3>
+          <h2 class="contact">Contact Information</h2>
         <p class="small-text">Easiest Contact Information.<br>
           <table class="contact">
             <tr></tr>
@@ -92,7 +92,10 @@
         </table>
        </p>
     </div>
+	<div
   </body>
+<footer class="foot">
+</footer>
 
 
 </html>
