--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Alphonse Portfolio</title>
         <meta name="viewport" content="width=device-width, initital-scale=1">
-        <link href="stylesheet.css" rel="stylesheet">
+        <link href="style_sheet_main.css" rel="stylesheet">
     </head>
     <div class="nav-container">
         <div class="navigation text">
