js link active new js file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Alphonse Portfolio</title>
         <meta name="viewport" content="width=device-width, initital-scale=1">
         <link href="style_sheet_main.css" rel="stylesheet">
+        <script src="./script.js" defer></script>
     </head>
     <div class="nav-container">
         <div class="navigation text">
