test update index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         </div>
     <div class="header-container">
     <h1 class="text"><a href="https://twitter.com/AlphonseJReitz">Alphonse Portfolio</a></h1>
+        <div id="rectangle">
+            <p>
+                0xBEEFCAFE
+                0xACEDDEAF
+                0XDEADCADE
+            </p>
+        </div>
     <img src="imgs/profile.jpg" id="profilepic" alt="Site Designer Jason Reitz">
     </div>
 
